--- a/Frontend/style.css
+++ b/Frontend/style.css
@@ -1,6 +1,58 @@
+html, body {
+  height: 100%;
+  margin: 0;
+}
+
 body {
-    background-color: #EEEEEE;
-    padding: 30px;
-    margin: 0;
-    font-family: 'Roboto', sans-serif;
+  min-height: 100vh;
+  background-color: #EEEEEE;
+  font-family: 'Roboto', sans-serif;
+  display: flex;              
+  flex-direction: column;     
+  min-height: 100vh;       
+}
+
+main {
+  flex: 1;               
+}
+
+.topSection {
+  width: 100%;
+  padding: 20px;
+  display: flex;
+  flex-direction: column;
+  gap: 0px;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+}
+
+.titleTopSection {
+  font-size: clamp(1.8rem, 5vw, 3rem); 
+  font-weight: bold;
+  background: linear-gradient(90deg, #88D1F1, #467EBC, #2E91C8);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  background-clip: text;
+}
+
+.sloganTopSection {
+  font-size: clamp(1.2rem, 4vw, 2.5rem);
+  color: gray;
+}
+
+.heroSection {
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+footer {
+  width: 100%;
+  height: 80px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-weight: 600;
 }
