--- a/Frontend/style.css
+++ b/Frontend/style.css
@@ -86,6 +86,22 @@ main {
             color: red;
             font-size: 0.9rem;
         }
+.navbar .btn-primary {
+  background-color: transparent;
+  color: #0d6efd;
+  border: 1px solid #0d6efd;
+}
+
+.navbar .btn-primary:hover {
+  background-color: #0d6efd;
+  color: white;
+  border-color: #0d6efd;
+}
+
+.navbar .btn-outline-primary:hover {
+  background-color: #0d6efd;
+  color: white;
+}
 footer {
   width: 100%;
   height: 80px;
